--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 </head>
 <body>
     <div>
-        <h1>MI AMOR(●'◡'●)💕</h1>
-        <h2>Tengo un regalo para ti✍(◔◡◔)</h2>
-        <button onclick="window.location.href='rosas.html'">Ver regalo☞💛</button>
+        <h1>MI AMOR 😋💙</h1>
+        <h2>Tengo un regalo para ti</h2>
+        <button onclick="window.location.href='rosas.html'">Ver regalo 💙</button>
     </div>
 </body>
 </html>
